# rust-road-traffic

./: .gitignore  Cargo.toml  Dockerfile.cpu  JETSON_NANO.md  LICENSE.md  Makefile  README.md  REAMDE.md  ROADMAP.md  build.rs  update_ui.sh
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: README.md  perspective_bench.rs
data/: conf.toml  conf2.toml  download_yolo_v4_only_vehicles.sh  tinyv3-vehicles.cfg  yolov4-tiny-vehicles-rect.cfg  yolov4-tiny.cfg
src/: kalman_tracking.rs  lib.rs  main.rs
src/kalman/: kalman_filter_linear.rs  kalman_tracking.rs  mod.rs
src/kalman_tracking/: kalman_tracking.rs
src/lib/: constants.rs  dataset_collector.rs  mod.rs  perf_stats.rs  report.rs  utils.rs
src/lib/cv/: mod.rs  raw_frame.rs  rect.rs  scalar.rs
src/lib/data_storage/: data_storage.rs  mod.rs
src/lib/detection/: detector.rs  mod.rs  postprocess.rs
src/lib/draw/: colors.rs  draw.rs  mod.rs
src/lib/draw/primitives/: circle.rs  line.rs  mod.rs  pixel.rs  rect.rs  text.rs
src/lib/geojson/: mod.rs  polygon.rs
src/lib/kalman/: kalman_filter_linear.rs  kalman_tracking.rs  mod.rs
src/lib/mjpeg_streaming/: broadcaster.rs  jpeg_encoder.rs  mjpeg_streaming.rs  mod.rs
src/lib/polygons/: convex_polygons.rs
src/lib/polygons/convex_polygons/: geometry.rs
src/lib/publisher/: mod.rs  redis_message.rs  redis_publisher.rs
src/lib/rest_api/: index.js  mjpeg_client.rs  mod.rs  polygons_mutations.rs  rest_api.rs  services.rs  toml_mutations.rs  ui.html  zones_list.rs  zones_mutations.rs  zones_stats.rs
src/lib/rest_api/static/: custom_poly.js  gl_draw_styles.js  index.html  index.js  styles.css
src/lib/sort/: deep_sort.rs  mod.rs  nn_matching.rs
src/lib/spatial/: epsg.rs  haversine.rs  mod.rs  perspective.rs  point.rs  spatial.rs
src/lib/tracker/: mod.rs  object_extra.rs  tracked_blob.rs  tracker.rs
src/lib/tracking/: blobie.rs  blobies_tracker.rs  utils.rs
src/lib/zones/: mod.rs  skeleton.rs  statistics.rs  virtual_line.rs  zone_grid.rs  zones.rs
src/lib/zones/zones/: geojson.rs  geometry.rs
src/polygons/: convex_polygons.rs  mod.rs
src/publisher/: mod.rs  redis_publisher.rs
src/rest_api/: mjpeg.html  mjpeg_client.rs  mjpeg_page.rs  mod.rs  rest_api.rs  services.rs  toml_mutations.rs  zones_list.rs  zones_mutations.rs  zones_stats.rs
src/settings/: mod.rs  settings.rs
src/spatial/: haversine.rs  mod.rs  spatial.rs
src/storage/: mod.rs  storage.rs
src/tracking/: blobie.rs  blobies_tracker.rs  kalman_filter_linear.rs  kalman_tracking.rs  mod.rs  utils.rs
src/video_capture/: capture.rs  frame.rs  mod.rs  video_capture.rs
