[package]
name = "rust-road-traffic"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-road-traffic"
path = "src/main.rs"

[features]
default = ["opencv-backend"]
# Use OpenCV DNN for inference (default)
opencv-backend = ["dep:opencv", "opencv/dnn", "od_opencv/opencv-backend"]
# Use ONNX Runtime for inference (no OpenCV dependency)
ort-backend = ["od_opencv/ort-backend"]
# CUDA acceleration for ORT backend
ort-cuda = ["ort-backend", "od_opencv/ort-cuda-backend"]
# TensorRT backend (Jetson Nano, NVIDIA GPUs with .engine files, no OpenCV dependency)
tensorrt-backend = ["od_opencv/tensorrt-backend"]
# Build libjpeg-turbo from source via cmake (no system lib needed)
turbojpeg-vendor = ["turbojpeg/cmake"]

[dependencies]
# OpenCV: only needed for opencv-backend (DNN inference). Optional for ort/tensorrt backends.
opencv = { version = "0.96.0", default-features = false, features = [], optional = true }
# ndarray: RawFrame => ImageBuffer conversion for ort/tensorrt backends
ndarray = "0.17"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
nalgebra = "0.34.1"
toml = "0.9.8"
toml_edit = "0.23.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
actix-cors = "0.6.2"
actix-web-static-files = "4.0"
static-files = "0.2.1"
ctrlc = { version = "3.0", features = ["termination"] }
redis = { version = "0.32.7" }
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.1"
mot-rs = "0.5.0"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-rapidoc = { version = "0.1", features = ["actix-web"] }
# Object detection with YOLO models
od_opencv = { version = "0.8.2", default-features = false, features = ["letterbox"] }
rand = "0.9.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
# JPEG encoding for MJPEG streaming (libjpeg-turbo).
# By default links to system libturbojpeg via pkg-config.
# Use `--features turbojpeg-vendor` to build from source via cmake.
turbojpeg = { version = "1.4", default-features = false, features = ["pkg-config"] }
# PNG encoding for report snapshots
png = "0.18.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
static-files = "0.2.1"

[build]
build = "build.rs"

[[bench]]
name = "perspective_bench"
harness = false
